--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "request": "^2.87.0",
     "socket.io": "^2.1.1"
   },
